--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".RunActivity"
+            android:name=".RunListActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,7 +19,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <receiver android:name=".LocationReceiver" android:exported="false">
+        <activity android:name=".RunActivity"
+                  android:label="@string/app_name" />
+        <receiver android:name=".TrackingLocationReceiver" android:exported="false">
             <intent-filter>
                 <action android:name="au.id.bennettscash.runtracker.ACTION_LOCATION"/>
             </intent-filter>
