--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 22
+    compileSdkVersion 'Google Inc.:Google APIs:23'
     buildToolsVersion '23.0.3'
 
     defaultConfig {
@@ -20,6 +20,7 @@ android {
 }
 
 dependencies {
+    compile 'com.google.android.gms:play-services:8.4.0'
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.0.0'
 }
