--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,18 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="au.id.bennettscash.runtracker" >
 
+    <permission android:name="au.id.bennettscash.android.runtracker.permission.MAPS_RECEIVE"
+        android:protectionLevel="signature" />
+    <uses-permission android:name="au.id.bennettscash.android.runtracker.permission.MAPS_RECEIVE" />
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
     <uses-feature android:required="true" android:name="android.hardware.location.gps" />
+    <uses-feature android:required="true" android:glEsVersion="0x00020000" />
 
     <application
         android:allowBackup="true"
@@ -21,11 +31,15 @@
         </activity>
         <activity android:name=".RunActivity"
                   android:label="@string/app_name" />
+        <activity android:name=".RunMapActivity" android:label="@string/app_name" />
         <receiver android:name=".TrackingLocationReceiver" android:exported="false">
             <intent-filter>
                 <action android:name="au.id.bennettscash.runtracker.ACTION_LOCATION"/>
             </intent-filter>
         </receiver>
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyC3774CWCXzhM2U8GR9blQsdVT3-Z_w-pg" />
     </application>
 
 </manifest>
